<resources>
    <string name="app_name">Gourmet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail_btn">Detail</string>
    <string name="menu_btn">Menu</string>
    <string name="gallery_btn">Gallery</string>
    <string name="review_btn">Review</string>
...
    <string name="address_title">Address</string>
    <string name="phone_title">Phone Number</string>
    <string name="open_hr_title">Opening Hours</string>
    <string name="star">Star</string>
    <string name="res_bg_image">Restaurant bg image</string>
    <string name="res_ava_image">Restaurant ava image</string>
    <string name="round_btn">Round white btn</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="gallery_img">Gallery image</string>
    <string name="dish_ava">Dish avatar</string>
    <string name="icon">Icon</string>
    <string name="react_count">(%1$d)</string>
    <string name="rating_count">(%1$d)</string>
...
    <string name="pizza">Pizza</string>
    <string name="navigate_to_browse">Navigate_To_Browse</string>
    <string name="background_home_img">background_home_img</string>
    <string name="older_wiser">The older, the wiser</string>
    <string name="top_reviewed">Top reviewed</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="gourmet_s_choice">Gourmet\'s choice</string>
    <string name="search">Search</string>
    <string name="go_to_search_view">Go to search view</string>
    <string name="recent_searches">Recent searches</string>
    <string name="popular_searches">Popular searches</string>
    <string name="recommended">Recommended</string>
...
    <string name="my_collections">My Collections</string>
    <string name="my_reviews">My Reviews</string>
    <string name="change_password">Change Password</string>
    <string name="request_edit">Request to add/edit a restaurant</string>
    <string name="log_out">Log Out</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_reviewed">Most Reviewed</string>
    <string name="nearest">Nearest</string>
    <string name="restaurants">Restaurants</string>
    <string name="dishes">Dishes</string>
    <string name="restaurant_description">Description</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="account_ava">Account ava</string>
    <string name="type">Type</string>
    <string name="n_results">%1$d results</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="user_avatar">User avatar</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_library">Photo Library</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="empty">Empty</string>
    <string name="add_your_first_collection">Add your first collection!</string>
...
